[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/FZLB_GBK.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://UIMain/TabList/PersonList.gd" type="Script" id=3]
[ext_resource path="res://UIMain/Sounds/Close.wav" type="AudioStream" id=4]
[ext_resource path="res://UIMain/Sounds/Click.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="TabList" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
custom_fonts/font = SubResource( 1 )
text = "PERSON_LIST"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 56.0
margin_right = -16.0
margin_bottom = -64.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tab1" type="ScrollContainer" parent="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="Grid" type="GridContainer" parent="Tabs/Tab1"]
columns = 6

[node name="Tab2" type="ScrollContainer" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="Grid" type="GridContainer" parent="Tabs/Tab2"]
columns = 6

[node name="Tab3" type="ScrollContainer" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="Grid" type="GridContainer" parent="Tabs/Tab3"]
columns = 6

[node name="Tab4" type="ScrollContainer" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="Grid" type="GridContainer" parent="Tabs/Tab4"]
columns = 6

[node name="Tab5" type="ScrollContainer" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="Grid" type="GridContainer" parent="Tabs/Tab5"]
columns = 6

[node name="ActionButtons" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_right = -16.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="ActionButtons"]
margin_right = 121.0
margin_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
text = "CANCEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="ActionButtons"]
margin_left = 125.0
margin_right = 249.0
margin_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
disabled = true
text = "CONFIRM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionButtons" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -48.0
margin_bottom = -16.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectAll" type="Button" parent="SelectionButtons"]
margin_right = 158.0
margin_bottom = 32.0
text = "SELECT_ALL"

[node name="UnselectAll" type="Button" parent="SelectionButtons"]
margin_left = 162.0
margin_right = 342.0
margin_bottom = 32.0
text = "UNSELECT_ALL"

[node name="ReverseSelect" type="Button" parent="SelectionButtons"]
margin_left = 346.0
margin_right = 551.0
margin_bottom = 32.0
text = "REVERSE_SELECT"

[node name="CloseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ConfirmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="hide" from="." to="." method="_on_TabList_hide"]
[connection signal="pressed" from="ActionButtons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="ActionButtons/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="SelectionButtons/SelectAll" to="." method="_on_SelectAll_pressed"]
[connection signal="pressed" from="SelectionButtons/UnselectAll" to="." method="_on_UnselectAll_pressed"]
[connection signal="pressed" from="SelectionButtons/ReverseSelect" to="." method="_on_ReverseSelect_pressed"]
